# 06_django_drf_api_with_frontend

./: .dockerignore  .env  README.md  docker-compose-dev.yaml  docker-compose.yaml  nginx.conf  pyproject.toml
frontend_react/: Dockerfile
market_postgres/: docker-compose.yaml  nginx.conf
skymarket/: Dockerfile  pyproject.toml
skymarket/ads/: models.py  permissions.py  serializers.py  urls.py  views.py
skymarket/ads/migrations/: 0001_initial.py  0002_ad_image.py  0003_alter_ad_options_alter_comment_options.py
skymarket/skymarket/: settings.py  urls.py
skymarket/users/: managers.py  models.py  serializers.py  urls.py
skymarket/users/management/commands/: loadall.py
skymarket/users/migrations/: 0001_initial.py  0002_user_is_active.py
