[tool.poetry]
name = "coursework 06"
version = "0.1.0"
description = "API for ad site based on Django framework"
authors = ["S.P. <sergey.a.protsenko@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.1"
djangorestframework = "^3.13.1"
Pillow = "^9.2.0"
psycopg2 = "^2.9.3"
drf-spectacular = "^0.24.0"
django-cors-headers = "^3.13.0"
python-dotenv = "^0.21.0"
phonenumbers = "^8.12.55"
django-phonenumber-field = "^7.0.0"
djoser = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
